2007-05-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* README.configure: DMV152 obsoleted.

2007-02-21	Joel Sherrill <joel@OARcorp.com>

	* Makefile.maint: Added TOOL_VERSIONS stanza and fixed typo.

2007-02-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Use MKDIR_P instead of mkdir_p.

2007-02-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.maint: Use VERSION as master source for version.m4's.
	* VERSION: Sync with version in aclocal/version.m4.

2007-01-28	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.maint: Sync nomenclature with that being used in
	  cpukit/score/include/rtems/system.h (major->minor,
	  minor->revision).

2007-01-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.maint: Remove references to
	  cpukit/score/include/rtems/system.h.
	* Makefile.maint: Add CVS_RUN.

2007-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.maint: New.

2007-01-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* acinclude.m4: AC_PREREQ(2.60).

2007-01-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ampolish3: Use MKDIR_P instead of mkdir_p.

2007-01-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove scripts/.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Add ampolish3.

2006-11-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bootstrap: Add -r (autoreconf).

2006-11-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bootstrap: Add -p (regenerate preinstall.ams).

2006-11-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ampolish3: New.

2006-10-19	Joel Sherrill <joel@OARcorp.com>

	* configure.ac: Remove all macro implementations and use only the
	static inline. Static inline functions are now well supported so
	there is no reason for duplicate maintenance.
	* aclocal/enable-inlines.m4: Removed.

2006-10-18	Ralf Corsépius <ralf.corsepius@rtems.org>
