@@ -1,3 +1,8 @@
+2007-05-11	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* README.configure, aclocal/bsp-alias.m4, aclocal/check-bsps.m4:
+	Per Jiri Gaisler remove unused erc32nfp and leon1 BSP variants.
+
 2007-05-11	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* README.configure: DMV152 obsoleted.
